--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             width: 10px; /* Set width to 10px */
             height: 10px; /* Set height to 10px */
             border-radius: 50%; /* Makes it a circle */
-            border: none; /* Remove any border */
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3); /* Optional shadow */
+            border: none; 
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3); 
         }
     </style>
 </head>
