--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="" class="logo" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PraveenNigam.com</title>
+  <title>Praveenigam.com</title>
 
   <!-- SEO Meta Tags -->
   <meta name="description"
